feat(DB-278): walkway meta 테이블 추가